# cluster-api

./: .backportrc.json  .dockerignore  .gitattributes  .gitignore  .gitleaksignore  .golangci-kal.yml  .golangci.yml  .goreleaser.yml  .govuln_exclude  .linkspector.yml  .markdownlinkcheck.json  .tiltignore  .trivyignore  .yamllint.yaml  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-builder  Dockerfile-manager  Dockerfile.capk  Dockerfile.dev  GLOSSARY.html  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  REVIEWING.md  SECURITY_CONTACTS  Tiltfile  VERSIONING.md  WORKSPACE  cloudbuild-nightly.yaml  cloudbuild.yaml  common.mk  docker-cluster.yaml  go.mod  (+10 more)
api/v1alpha2/: BUILD.bazel  cluster_phase_types.go  cluster_types.go  cluster_webhook.go  clusterlist_webhook.go  common_types.go  conversion.go  conversion_test.go  doc.go  dockercluster_types.go  dockermachine_types.go  dockermachinetemplate_types.go  groupversion_info.go  kubeadmbootstrapconfig_types.go  kubeadmbootstrapconfig_types_test.go  kubeadmconfigtemplate_types.go  machine_phase_types.go  machine_types.go  machine_webhook.go  machinedeployment_types.go  machinedeployment_webhook.go  machinedeploymentlist_webhook.go  machinelist_webhook.go  machineset_types.go  machineset_webhook.go  machinesetlist_webhook.go  suite_test.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go
cluster-api/: .gitignore  BUILD.bazel  CONTRIBUTING.md  Gopkg.toml  Makefile  README.md  cluster.yaml  machines.yaml  main.go  new-machines.yaml
cluster-api/api/: Cluster.go
cluster-api/client/: client.go  cluster.go  machines.go
cluster-api/cloud/: actuators.go  machineactuator.go
cluster-api/cluster/: types.go
cluster-api/cmd/: add.go  create.go  delete.go  repair.go  root.go  upgrade.go
cluster-api/deploy/: deploy.go  deploy_helper.go  upgrade.go
cluster-api/errors/: machines.go
cluster-api/examples/: gce-machine.yaml
cluster-api/gcp-deployer/: README.md  cluster.yaml  machines.yaml.template  main.go
cluster-api/machine-controller/: .gitignore  Dockerfile  Makefile  main.go
cluster-api/machinecontroller/: BUILD  Dockerfile  Makefile  README.md  main.go
cluster-api/machines/: types.go
cluster-api/pkg/: BUILD  doc.go
cluster-api/repair/: README.md  main.go
cluster-api/sample/: machineset.yaml
cluster-api/upgrader/: README.md  main.go
cluster-api/util/: util.go
clusterctl/clusterdeployer/: BUILD.bazel  clientfactory.go  clientfactory.go.txt  clusterapiserver.go  clusterapiservertemplate.go  clusterclient.go  clusterclient_test.go  clusterclientfactory.go  clusterdeployer.go  clusterdeployer_test.go  providercomponentsstorefactory.go
clusterctl/cmd/: BUILD.bazel  create.go  create_cluster.go  create_cluster_test.go  delete.go  delete_cluster.go  register.go  root.go  validate.go  validate_cluster.go  validate_cluster_test.go
clusterctl/validation/: BUILD.bazel  validate_cluster_api_objects.go  validate_cluster_api_objects_test.go
cmd/clusterctl/: BUILD.bazel  Dockerfile  OWNERS  README.md  main.go  main_integration_test.go
cmd/controller-manager/: .gitignore  BUILD.bazel  Dockerfile  Makefile  main.go
cmd/example-provider/: BUILD.bazel  Dockerfile  main.go
config/: BUILD.bazel  kustomization.yaml  patch_crd_webhook_namespace.yaml
config/bootstrap/: kustomization.yaml
config/certmanager/: cert-manager.yaml  certificate.yaml
config/ci/: kustomization.yaml
config/controlplane/: kustomization.yaml
config/core/: kustomization.yaml  manager_arguments.yaml  manager_role_aggregation_patch.yaml
config/crd/: kustomization.yaml  kustomizeconfig.yaml
config/crds/: cluster.k8s.io_clusters.yaml  cluster.k8s.io_machineclasses.yaml  cluster.k8s.io_machinedeployments.yaml  cluster.k8s.io_machines.yaml  (+23 more)
controllers/: BUILD.bazel  alias.go  certificates.go  certificates_test.go  cluster_controller.go  cluster_controller_phases.go  cluster_controller_phases_test.go  cluster_controller_postapply.go  cluster_controller_test.go  clustertopology_controller.go  clustertopology_controller_compute.go  clustertopology_controller_compute_test.go  clustertopology_controller_mergepatch.go  clustertopology_controller_mergepatch_test.go  clustertopology_controller_sync.go  control_plane_init_locker.go  control_plane_init_locker_test.go  doc.go  dockercluster_controller.go  dockermachine_controller.go  dockermachine_controller_test.go  kubeadm_control_plane_controller.go  kubeadmbootstrapconfig_controller.go  kubeadmbootstrapconfig_controller_reconciler_test.go  kubeadmbootstrapconfig_controller_test.go  kubeadmconfig_controller.go  kubeadmconfig_controller_reconciler_test.go  kubeadmconfig_controller_test.go  machine_controller.go  machine_controller_node_labels.go  machine_controller_node_labels_test.go  machine_controller_noderef.go  machine_controller_noderef_test.go  machine_controller_phases.go  machine_controller_phases_test.go  machine_controller_test.go  machine_helpers.go  machine_helpers_test.go  machinedeployment_controller.go  machinedeployment_controller_test.go  (+25 more)
errors/: BUILD.bazel  clusters.go  consts.go  deployer.go  machines.go  pointer.go  unstructured.go
hack/: BUILD.bazel  boskos.py  build-gitbook.sh  check-kind-version.sh  crd-ref-docs-config-v1beta1.yaml  crd-ref-docs-config-v1beta2.yaml  crd-ref-docs-config.yaml  docker-image-verify.sh  ensure-go.sh  ensure-golangci-lint.sh  ensure-kind.sh  ensure-kubectl.sh  ensure-kustomize.sh  ensure-trivy.sh  generate-doctoc.sh  get-project-maintainers.sh  go-tools-build.sh  gogcflags.sh  install-controller-runtime.sh  kind-install-for-capd.sh  kind-install-for-capk.sh  kind-install.sh  pin-dependency.sh  sed.sh  set-workspace-status.sh  setup-envtest-with-kind.sh  tools.go  update-bazel.sh  update-deps.sh  update-modules.sh  update-vendor.sh  utils.sh  verify-all.sh  verify-bazel.sh  verify-boilerplate.sh  verify-capi-book-summary.sh  verify-clientset.sh  verify-container-images.sh  verify-deadcode.sh  verify-deps.sh  (+19 more)
util/: BUILD.bazel  deprecated.go  retry.go  suite_test.go  util.go  util_test.go
(+6744 files in other folders)
