load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//hack/bazel:run_in_workspace_with_goroot.bzl", "workspace_binary")

# gazelle:prefix sigs.k8s.io/cluster-api
# gazelle:proto disable_global
# gazelle:resolve go github.com/grpc-ecosystem/grpc-gateway/internal //vendor/github.com/grpc-ecosystem/grpc-gateway/internal:go_default_library
gazelle(
    name = "gazelle",
    external = "vendored",
)

workspace_binary(
    name = "lint",
    args = ["run"],
    cmd = "@com_github_golangci_golangci-lint//cmd/golangci-lint",
)

workspace_binary(
    name = "lint-full",
    args = ["run --fast=false"],
    cmd = "@com_github_golangci_golangci-lint//cmd/golangci-lint",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/cluster-api",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha2:go_default_library",
        "//controllers:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/k8s.io/klog/klogr:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime:go_default_library",
    ],
)

go_binary(
    name = "cluster-api-manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
