load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clusters.go",
        "consts.go",
        "controllers.go",
        "deployer.go",
        "machines.go",
        "pointer.go",
    ],
    importpath = "sigs.k8s.io/cluster-api/errors",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/pkg/errors:go_default_library"],
)
