load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "sigs.k8s.io/cluster-api/hack",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/sigs.k8s.io/controller-tools/cmd/controller-gen:go_default_library",
        "//vendor/sigs.k8s.io/testing_frameworks/integration:go_default_library",
    ],
)
