load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster_phase_types.go",
        "cluster_types.go",
        "common_types.go",
        "defaults.go",
        "groupversion_info.go",
        "machine_phase_types.go",
        "machine_types.go",
        "machinedeployment_types.go",
        "machineset_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "sigs.k8s.io/cluster-api/api/v1alpha2",
    visibility = ["//visibility:public"],
    deps = [
        "//errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/validation:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/scheme:go_default_library",
    ],
)
