load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "create.go",
        "create_cluster.go",
        "delete.go",
        "delete_cluster.go",
        "root.go",
        "validate.go",
        "validate_cluster.go",
    ],
    importpath = "sigs.k8s.io/cluster-api/clusterctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//clusterctl/clusterdeployer:go_default_library",
        "//clusterctl/clusterdeployer/bootstrap/existing:go_default_library",
        "//clusterctl/clusterdeployer/bootstrap/minikube:go_default_library",
        "//clusterctl/providercomponents:go_default_library",
        "//clusterctl/validation:go_default_library",
        "//pkg/apis/cluster/common:go_default_library",
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/clientcmd:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/logs:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["create_cluster_test.go"],
    embed = [":go_default_library"],
)
