load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/openshift/cluster-api/cmd/clusterctl",
    visibility = ["//visibility:private"],
    deps = ["//cmd/clusterctl/cmd:go_default_library"],
)

go_binary(
    name = "clusterctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
