load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/cluster-api/cmd/clusterctl",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha2:go_default_library",
        "//cmd/clusterctl/cmd:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
    ],
)

go_binary(
    name = "clusterctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
