load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/cluster-api/cmd/example-provider",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha2:go_default_library",
        "//controllers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller:go_default_library",
    ],
)

go_binary(
    name = "example-provider",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
