load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addtoscheme_cluster_v1alpha1.go",
        "addtoscheme_machine_v1beta1.go",
        "apis.go",
    ],
    importpath = "github.com/openshift/cluster-api/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/v1alpha1:go_default_library",
        "//pkg/apis/machine/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
    ],
)
