load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cert_authority.go"],
    importpath = "sigs.k8s.io/cluster-api/pkg/cert",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/golang/glog:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["cert_authority_test.go"],
    embed = [":go_default_library"],
)
