load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_machineset.go",
        "add_node.go",
        "controller.go",
    ],
    importpath = "github.com/openshift/cluster-api/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/machineset:go_default_library",
        "//pkg/controller/node:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
