load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clusterapiserver.go",
        "clusterapiservertemplate.go",
    ],
    importpath = "sigs.k8s.io/cluster-api/pkg/deployer",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/util/cert:go_default_library",
        "//vendor/k8s.io/client-go/util/cert/triple:go_default_library",
    ],
)
