load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clusters.go",
        "deployer.go",
        "machines.go",
    ],
    importpath = "sigs.k8s.io/cluster-api/pkg/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/cluster/common:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
