load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kubeadm.go"],
    importpath = "sigs.k8s.io/cluster-api/pkg/kubeadm",
    visibility = ["//visibility:public"],
    deps = ["//pkg/cmdrunner:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["kubeadm_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/testcmdrunner:go_default_library"],
)
