load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/cluster-api/tools/upgrader",
    visibility = ["//visibility:private"],
    deps = ["//tools/upgrader/cmd:go_default_library"],
)

go_binary(
    name = "upgrader",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
