load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["externalbootstrapcluster.go"],
    importpath = "sigs.k8s.io/cluster-api/clusterctl/clusterdeployer/externalclusterprovisioner",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["externalbootstrapcluster_test.go"],
    embed = [":go_default_library"],
)
